tests/ui/reject_generics.stderr
error: #[pyclass] cannot have generic parameters. For an explanation, see https://pyo3.rs/v0.28.3/class.html#no-generic-parameters
 --> tests/ui/reject_generics.rs:4:25
  |
4 | struct ClassWithGenerics<A> {
  |                         ^

error: #[pyclass] cannot have lifetime parameters. For an explanation, see https://pyo3.rs/v0.28.3/class.html#no-lifetime-parameters
  --> tests/ui/reject_generics.rs:10:27
   |
10 | struct ClassWithLifetimes<'a> {
   |                           ^^

error: aborting due to 2 previous errors
